# takt-score

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/hooks/: format-on-edit.sh
.github/workflows/: pr-review.yml
.husky/: pre-commit
backend/: .env.example  .gitignore  Makefile  alembic.ini  go.mod  go.sum  pyproject.toml  sqlc.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_scores.py
backend/app/: config.py  constants.py  db.py  main.py  seed.py
backend/app/models/: __init__.py  score.py
backend/app/routers/: scores.py
backend/app/schemas/: music.py  score.py
backend/cmd/seed/: main.go
backend/cmd/server/: main.go
backend/internal/api/score/: dto.go  handler.go  mapper.go  mapper_test.go  service.go  service_test.go  validate.go  validate_test.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/domain/: score.go
backend/internal/store/: beats.sql.go  exports.go  hits.sql.go  measures.sql.go  models.go  query_exports.go  query_exports_test.go  scores.sql.go
backend/internal/store/queries/: beats.sql  hits.sql  measures.sql  scores.sql
backend/migrations/: 00001_init.sql  00002_add_spotify_track_id.sql
backend/tests/: conftest.py  test_scores.py
data/: scores.json
frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/data/: scores.json
src/app/: global.css  globals.css  layout.tsx  page.tsx
src/lib/: audio.ts  (+11 more)
(+166 files in other folders)
